# minimal-python-tdd

./: .gitignore  README.md  kata.py  pyproject.toml  tests.py
